tests/ui/consts/std/conjure_uninhabited_zst.stderr
error: any use of this value will cause an error
  --> $DIR/conjure_uninhabited_zst.rs:7:46
   |
LL | const CONJURE_INVALID: Infallible = unsafe { conjure_zst() };
   | ---------------------------------------------^^^^^^^^^^^^^---
   |                                              |
   |                                              aborted execution: attempted to instantiate uninhabited type `Infallible`
   |
   = note: `#[deny(const_err)]` on by default
   = warning: this was previously accepted by the compiler but is being phased out; it will become a hard error in a future release!
   = note: for more information, see issue #71800 <https://github.com/rust-lang/rust/issues/71800>

error: aborting due to previous error

